[tool.poetry]
name = "mdh"
version = "0.1.2"
description = "modified dh"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/mdh/"
repository = 'https://github.com/MultipedRobotics/dh'
# documentation = "http://..."
keywords = ["serial manipulators", "robotics", "kinematics", "dh", "denavit", "hartenberg", "denavit–hartenberg"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# script_name = 'myscript:main'

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.9"
scipy = ">=1.0"
importlib-metadata = {version="*", python="<3.8"}
attrs = "*"
colorama = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
